--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Same styles -->
+    <style type="text/css">
+        body{
+          text-align: left;
+          margin: 10;
+          font-family: Verdana, Arial, sans-serif;
+          font-size: 16px;
+        }
+      </style>
 </head>
 
 <body>
 
     <h2>Text editor with auto-save</h2>
-    <div id="editor" style="height: 100%; width: 70%; border: solid; border-width: 1px; padding: 15px;"></div>
+    <div id="editor" contenteditable="true" style="height: 100%; width: 70%; border: solid; border-width: 1px; padding: 15px;"></div>
 </body>
 
 </html>
