black theme support

--- a/index.html
+++ b/index.html
@@ -2,21 +2,11 @@
 <html>
 
 <head>
-    <title>My text editor</title>
-    <!-- Behold the three lines of wizardry -->
+    <title>Simple text editor</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Same styles -->
-    <style type="text/css">
-        body {
-            text-align: left;
-            margin: 10;
-            font-family: Verdana, Arial, sans-serif;
-            font-size: 16px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
