--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
 <body>
+    <header>
+        <img id="logo" src="assets/img/draw.png" />
+        <h1>Simple editor</h1>
+    </header>
 
-    <h2>Text editor with auto-save</h2>
-    <div id="editor" contenteditable="true"
-        style="height: 100%; width: 70%; border: solid; border-width: 1px; padding: 15px;"></div>
+    <div id="editor" contenteditable="true"></div>
 
     <script>
         // If there's anything in the storage
